[project]
name = "mas-playground"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = ["mcp-agent>=0.2.6", "langchain-mcp-adapters>=0.2.1", "langchain>=1.2.0"]
authors = [
    {name = "Abhishek Ranjan", email = "aviranjan444@gmail.com"},
]
license = {text = "MIT"}

[tool.pdm]
distribution = false
